2007-09-21    <tino@firebird.03.softkill.net>

	* ptybuffer.c (do_check): resource leakage fixed: Option -c forgot
	to close the socket.

2007-09-18    <tino@firebird.03.softkill.net>

	* ptybufferconnect.c (ignore_fn): added, should work now as expected

2007-09-06    <tino@firebird.03.softkill.net>

	* script/autostart.sh: "start"-message now is send to STDERR too,
	so you can redirect STDOUT to /dev/null to suppress the "ok"
	messages to cron.

2007-08-29    <tino@firebird.03.softkill.net>

	* ptybufferconnect.c (out_fn): bugfix: Send to stdout, not stdin

	* ptybuffer.c (connect_process): found where the buggy lines from
	ptybuffer_new_fd must be put.  And fixed the bug in main where the
	wrong variable length (int instead of long) was passed to getopt
	(thus the variable was not initialized correctly).
	(main): option -k added and option -i implemented
	(connect_process): option -i and -k implemented
	(send_to_pty): added (code moved from connect_process)

	* TODO (BUGs): added

	* ptybufferconnect.c (main): option -i added

	* ptybuffer.c (connect_process): bugfix: min was int, not long
	long as needed.  Long running ptybuffers (more than 2 billion IO
	operations) thus were not able to output any data to the socket
	and eat up 100% CPU.
	(ptybuffer_new_fd): I am really not sure what I wanted to do with
	this lines I now disabled.  buf->screenpos must be initialized to
	0 to print the history buffer overrun lines correctly.  However it
	was initizlized to a negative value by these lines if there were
	less than history_tail lines in the buffer.  Perhaps an overrun
	issue or forgotten buggy code before the skipped infoblocks were
	printed?  Problem showed up on 64 bit platforms first, I am really
	puzzled why not before.
	
2007-08-25    <tino@firebird.03.softkill.net>

	* Makefile.tino (DISTCLEAN): cleans for php/ test socket

2007-08-24    <tino@firebird.03.softkill.net>

	* php/.htaccess, php/sock/.htaccess: added
