@@ -1,18 +1,4 @@
 daemonize interactive tty line driven programs with output history
-# $Header$
-#
-# $Log$
-# Revision 1.4  2007-08-29 21:54:21  tino
-# dist 0.6.0, see ChangeLog
-#
-# Revision 1.3  2007/08/25 10:31:55  tino
-# intermediate dist
-#
-# Revision 1.2  2007/03/04 02:49:18  tino
-# Commit for dist, see ChanegLog
-#
-# Revision 1.1  2004/11/12 04:45:00  tino
-# NULL pointer dereference corrected and minor logging improvements
 
 ptybuffer was designed to get rid of screen/expect constructs to improve
 stability.  It deamonizes programs which need a tty/pty to operate.  Unix
