@@ -1,7 +1,7 @@
 # Makefile automatically generated, do not edit!
 # This output (only this Makefile) is Public Domain.
 #
-#@MD5TINOIGN@ Creation date: Sat Nov 23 18:18:50 CET 2013
+#@MD5TINOIGN@ Creation date: Sun Aug 28 16:41:24 CEST 2016
 #
 # This file is based on following files:
 #@MD5TINOIGN@ 1: Makefile.tino
@@ -43,8 +43,8 @@ INSTALLPATH=/usr/local
       PROG2=ptybufferconnect
 
 # Override those in Makefile.tino if needed:
- STD_CFLAGS=-g -Wall -Wno-unused-function -O3
- STD_CCFLAGS=-g -Wall -Wno-unused-function -O3
+ STD_CFLAGS=-g -Wall -Wno-unused-function -O3 -Wno-error=unused-value
+ STD_CCFLAGS=-g -Wall -Wno-unused-function -O3 -Wno-error=unused-value
 STD_LDFLAGS=
  STD_LDLIBS=
     BINPATH=bin
@@ -59,10 +59,10 @@ STD_LDFLAGS=
 # Except for the compiler generated dependencies at the end
 # from here no changes shall be needed.
 
-     CFLAGS=$(DBG_FLAGS) $(DBG_CFLAGS) $(ADD_CFLAGS) $(STD_CFLAGS) -I"$(HERE)"
-   CXXFLAGS=$(DBG_CCFLAGS) $(ADD_CCFLAGS) $(STD_CCFLAGS) -I"$(HERE)"
-    LDFLAGS=$(DBG_LDFLAGS) $(ADD_LDFLAGS) $(STD_LDFLAGS)
-     LDLIBS=$(DBG_LDLIBS) $(ADD_LDLIBS) $(STD_LDLIBS)
+     CFLAGS=$(DBG_FLAGS) $(DBG_CFLAGS) $(STD_CFLAGS) $(ADD_CFLAGS) -I"$(HERE)"
+   CXXFLAGS=$(DBG_CCFLAGS) $(STD_CCFLAGS) $(ADD_CCFLAGS) -I"$(HERE)"
+    LDFLAGS=$(DBG_LDFLAGS) $(STD_LDFLAGS) $(ADD_LDFLAGS)
+     LDLIBS=$(DBG_LDLIBS) $(STD_LDLIBS) $(ADD_LDLIBS)
 
 VERSIONFILE=$(PROG1)_version
 VERSIONNAME=$(VERSIONFILE)
@@ -177,16 +177,18 @@ $(PROG2):	$(PROG2).o $(OBJS) $(LIBS)
 
 # included: ptybuffer.d
 $(PROG1).o:  ptybuffer.c tino/file.h tino/sysfix.h tino/sysfix_cygwin.h \
- tino/type.h tino/debug.h tino/fatal.h tino/ex.h tino/arg.h tino/alloc.h \
- tino/err.h tino/fatal.h tino/debug.h tino/sock_select.h tino/sock.h \
- tino/file.h tino/alloc.h tino/threads.h tino/strprintf.h tino/str.h \
- tino/syscap.h tino/sock_select_old.h tino/slist.h tino/getopt.h \
- tino/proc.h tino/filetool.h tino/signals.h ptybuffer_version.h
+ tino/sysfix_diet.h tino/sysfix_linux.h tino/sysfix_osx.h tino/type.h \
+ tino/debug.h tino/fatal.h tino/ex.h tino/arg.h tino/alloc.h tino/err.h \
+ tino/fatal.h tino/debug.h tino/sock_select.h tino/sock.h tino/file.h \
+ tino/alloc.h tino/threads.h tino/strprintf.h tino/str.h tino/syscap.h \
+ tino/sock_select_old.h tino/slist.h tino/getopt.h tino/proc.h \
+ tino/filetool.h tino/signals.h ptybuffer_version.h
 
 
 # included: ptybufferconnect.d
 $(PROG2).o:  ptybufferconnect.c tino/file.h tino/sysfix.h \
- tino/sysfix_cygwin.h tino/type.h tino/sockbuf.h tino/sock_select.h \
+ tino/sysfix_cygwin.h tino/sysfix_diet.h tino/sysfix_linux.h \
+ tino/sysfix_osx.h tino/type.h tino/sockbuf.h tino/sock_select.h \
  tino/sock.h tino/file.h tino/fatal.h tino/ex.h tino/arg.h tino/alloc.h \
  tino/err.h tino/debug.h tino/threads.h tino/strprintf.h tino/str.h \
  tino/syscap.h tino/sock_select_old.h tino/buf.h tino/codec.h \
