@@ -1,1 +1,1 @@
-0.6.5
+0.7.0
